gitops/stirling-pdf/spdf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  labels:
    app.kubernetes.io/name: s-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: s-pdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s-pdf
    spec:
      containers:
      - name: s-pdf
        image: ghcr.io/stirling-tools/s-pdf:3.1.0-fat
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: ocr
          mountPath: /usr/share/tesseract-ocr/4.00/tessdata
        - name: logs
          mountPath: /logs
        - name: pipeline
          mountPath: /pipeline
        - name: confdir
          mountPath: /configs
        - name: tmp
          mountPath: /tmp/stirling-pdf
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 10
          tcpSocket:
            port: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
        resources:
          requests:
            cpu: 5m
            memory: 300Mi
          limits: {}
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: ocr
        emptyDir: {}
      - name: configs
        configMap:
          name: app-config
      - name: confdir
        emptyDir: {}
      - name: logs
        emptyDir: {}
      - name: pipeline
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: stirling-pdf
spec:
  selector:
    app.kubernetes.io/name: s-pdf
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
spec:
  rules:
  - host: pdf.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf
            port:
              number: 8080
  - host: pdf.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spdf
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: s-pdf
  policyTypes:
    - Ingress
    - Egress
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - protocol: TCP
      port: 8080
